--- a/src/lib/Modal/Style.css
+++ b/src/lib/Modal/Style.css
@@ -29,6 +29,7 @@
   min-height: 40px;
   position: fixed;
   z-index: 1;
+  animation: fadin 900ms ease-out;
 }
 
 /* Modal Outside/Box */
@@ -52,3 +53,17 @@
   text-decoration: none;
   cursor: pointer;
 } 
+
+/*Animation*/
+
+@keyframes fadin {
+  0% {
+    transform: translate(-50%, -150%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+}
