--- a/src/lib/Modal/Style.css
+++ b/src/lib/Modal/Style.css
@@ -24,12 +24,17 @@
   top: 50%;
   transform: translate(-50%, -50%);
   padding: 5px 20px 5px 20px;
+   margin: 15px;
   border: 1px solid #888;
-  width: 15%; 
+  min-width: 15%; 
+  width: fit-content;
   min-height: 40px;
   position: fixed;
   z-index: 1;
   animation: fadin 900ms ease-out;
+  box-shadow: 0px -1px 10px 1px rgba(0,0,0,0.30);
+-webkit-box-shadow: 0px -1px 10px 1px rgba(0,0,0,0.30);
+-moz-box-shadow: 0px -1px 10px 1px rgba(0,0,0,0.30);
 }
 
 /* Modal Outside/Box */
@@ -40,16 +45,30 @@
   z-index: 0;
 }
 
+/*Content of the Modal*/
+.OutputContent{
+  margin: 15px;
+}
+
 /* The Close Button */
 .close {
-  color: #aaa;
+  color: #fff;
   float: right;
-  font-size: 28px;
+  font-size: 25px;
   font-weight: bold;
+  background-color: black;
+  width: 35px;
+  margin: auto;
+  text-align: center;
+  border-radius: 30px;
+  top: -10px;
+  position: absolute;
+  right: -8px;
+  height: 35px;
 }
 .close:hover,
 .close:focus {
-  color: black;
+  color: #aaa;
   text-decoration: none;
   cursor: pointer;
 } 
